# Scarabee

./: .env  3ways api.md  Cargo.toml  README.md  Rocket.toml  database v2.mwb  database v2.mwb.bak  database v3.mwb  database v3.mwb.bak  database v4.mwb  database v4.mwb.bak  database.mwb  database.mwb.bak
migrations/2021-08-08-155012_init/: up.sql
src/: auth.rs  connection.rs  main.rs  models.rs  schema.rs
static/: api.js  index.html  main.js  styles.css
