[package]
name = "share3ways"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
blake2 = "0.9.1"
hex = "0.4.3"
serde = "1.0.127"
serde_json = "1.0.66"
rand = "0.8.4"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = [
    "diesel_mysql_pool",
] }
chrono = { version = "0.4", features = ["serde"] }
